feat: logout url added
